objects/OF_CQS_Anagrafica__c.object
<CustomObject>
    <fields>
        <fullName>CQS_An_ConsorziataCapogruppo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consorziata Capogruppo</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Consorziata Capogruppo</relationshipLabel>
        <relationshipName>AffidatariaCapolistaCons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_An_Consorziata_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consorziata</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Consorziata 2</relationshipLabel>
        <relationshipName>Consorziata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_An_Consorziata_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consorziata</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Consorziata 3</relationshipLabel>
        <relationshipName>Consorziata3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_An_Consorziata_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consorziata</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Consorziata 4</relationshipLabel>
        <relationshipName>Consorziata4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Check_Affidataria__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attributo che caratterizza un&apos; impresa titolare di contratto d’appalto con OF</inlineHelpText>
        <label>Affidataria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Autorizzazione_CustObj__c</fullName>
        <label>Autorizzazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Idoneo</fullName>
                </value>
                <value>
                    <fullName>Idoneo con Riserva</fullName>
                </value>
                <value>
                    <fullName>Non Idoneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Cap__c</fullName>
        <label>Cap</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Esecutrice_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Esecutrice 2</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Esecutrici 2</relationshipLabel>
        <relationshipName>Anagrafiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Esecutrice_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Esecutrice 3</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Esecutrice 3</relationshipLabel>
        <relationshipName>Esecutrici_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Esecutrice_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Esecutrice 4</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Anagrafiche (Esecutrice 4)</relationshipLabel>
        <relationshipName>Esecutrici_4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Esecutrice_Capofila__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Esecutrice Capofila</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Imprese Esecutrici Capofila</relationshipLabel>
        <relationshipName>EsecutriciCapofila</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OF_CQS_ID_Anagrafica__c</fullName>
        <label>ID Anagrafica</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Esecutrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Esecutrice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Impresa Mandataria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Imprese Esecutrici</relationshipLabel>
        <relationshipName>Imprese_EsecutriciOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Mandataria_Anagrafica__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Affidataria</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Impresa Mandataria</value>
            </filterItems>
            <filterItems>
                <field>$Source.CQS_Check_Affidataria__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Anagrafiche</relationshipLabel>
        <relationshipName>Imprese_Mandatarie</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Indirizzo_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Istanza_di_Autorizzazione_CustObj__c</fullName>
        <label>Lettera d&apos;ordine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Numero_Civico__c</fullName>
        <label>Numero Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Parere_CustObj__c</fullName>
        <label>Parere</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Particella_Toponomastica__c</fullName>
        <label>Particella Toponomastica</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Provincia__c</fullName>
        <label>Provincia</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Impresa__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo di Impresa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <type>Phone</type>
    </fields>
    <label>Anagrafica</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Comune__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Imprese_Esecutrici_non_Mandatarie</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OF_CQS_Comune__c</columns>
        <columns>Telefono__c</columns>
        <columns>OF_CQS_Fax__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OF_CQS_Anagrafica__c.Impresa_Esecutrice</value>
        </filters>
        <label>Imprese Esecutrici non Mandatarie</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OF_CQS_Consorzi_Esecutrici</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Esecutrice_Capofila__c</columns>
        <columns>OF_CQS_Esecutrice_2__c</columns>
        <columns>OF_CQS_Esecutrice_3__c</columns>
        <columns>OF_CQS_Esecutrice_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OF_CQS_Anagrafica__c.OF_CQS_Consorzi_Esecutrici</value>
        </filters>
        <filters>
            <field>OF_CQS_Website__c</field>
            <operation>equals</operation>
        </filters>
        <label>Consorzi Esecutrici</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tutte_le_Imprese_Mandatarie</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Impresa_Esecutrice__c</columns>
        <columns>OF_CQS_Esecutrice_Capofila__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OF_CQS_Anagrafica__c.OF_CQS_Impresa_Mandataria</value>
        </filters>
        <label>Tutte le Imprese Affidatarie</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X5</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Impresa_Esecutrice__c</columns>
        <columns>OF_CQS_Indirizzo__c</columns>
        <columns>OF_CQS_Numero_Civico__c</columns>
        <columns>Partita_IVA__c</columns>
        <columns>OF_CQS_Tipo_di_Impresa__c</columns>
        <columns>CQS_Check_Affidataria__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>NUOVA PANELECTRIC  S.R.L.</value>
        </filters>
        <filters>
            <field>OF_CQS_Cap__c</field>
            <operation>equals</operation>
            <value>73050</value>
        </filters>
        <filters>
            <field>OF_CQS_Comune__c</field>
            <operation>equals</operation>
            <value>NARDO&apos;  (LE)</value>
        </filters>
        <filters>
            <field>OF_CQS_Impresa_Esecutrice__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OF_CQS_Indirizzo_Email__c</field>
            <operation>equals</operation>
            <value>nuovapanelectric@pec.it</value>
        </filters>
        <label>5</label>
        <language>it</language>
    </listViews>
    <nameField>
        <label>Ragione Sociale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anagrafiche</pluralLabel>
    <recordTypes>
        <fullName>CQS_Imprese_in_raggruppamento</fullName>
        <active>true</active>
        <description>Raggruppamenti di imprese (ATI, RTI, consorzi) titolari di contratto d’appalto con OF</description>
        <label>Imprese in raggruppamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Impresa_Esecutrice</fullName>
        <active>false</active>
        <description>impresa che esegue l’opera o parte di essa</description>
        <label>Impresa Esecutrice</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Consorzi_Esecutrici</fullName>
        <active>false</active>
        <description>Raggruppamenti di imprese (ATI, RTI, consorzi) che eseguono l’opera o parte di essa</description>
        <label>Imprese esecutrici in raggruppamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Impresa_Mandataria</fullName>
        <active>true</active>
        <description>Impresa singola</description>
        <label>Impresa</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Controlla_Cap_Numerico</fullName>
        <active>false</active>
        <errorConditionFormula>!ISNUMBER(OF_CQS_Cap__c)</errorConditionFormula>
        <errorMessage>Nel campo Cap è possibile inserire solo caratteri numerici.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controlla_Numero_Civico_solo_numeri</fullName>
        <active>false</active>
        <errorConditionFormula>!ISNUMBER(OF_CQS_Numero_Civico__c)</errorConditionFormula>
        <errorMessage>Nel campo Cap è possibile inserire solo caratteri numerici.</errorMessage>
    </validationRules>
</CustomObject>